# contextforge-plugins-framework

./: .gitignore  ADOPTERS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml
cpex/framework/: __init__.py  constants.py  models.py  utils.py
cpex/framework/loader/: plugin.py
cpex/framework/wasm/: __init__.py  capabilities.py  client.py  linker.py  manifest.py
cpex/templates/wasm/: cookiecutter.json
cpex/templates/wasm/{{cookiecutter.plugin_slug}}/: Cargo.toml  Makefile  config.yaml  plugin-manifest.yaml
cpex/templates/wasm/{{cookiecutter.plugin_slug}}/src/: lib.rs
cpex/templates/wasm/{{cookiecutter.plugin_slug}}/tests/: README.md  test_plugin.py
cpex/templates/wasm/{{cookiecutter.plugin_slug}}/wit/: cpex-plugin.wit
cpex/tools/: cli.py
crates/: README.md
crates/cpex-core/: Cargo.toml
crates/cpex-core/examples/: README.md  cmf_capabilities_demo.rs  cmf_capabilities_demo.yaml  plugin_demo.rs  plugin_demo.yaml
crates/cpex-core/src/: config.rs  context.rs  error.rs  executor.rs  factory.rs  lib.rs  manager.rs  plugin.rs  registry.rs
crates/cpex-core/src/cmf/: constants.rs  content.rs  message.rs  mod.rs  view.rs
crates/cpex-core/src/extensions/: agent.rs  completion.rs  container.rs  delegation.rs  filter.rs  framework.rs  guarded.rs  http.rs  llm.rs  mcp.rs  meta.rs  mod.rs  monotonic.rs  provenance.rs  request.rs  security.rs  tiers.rs
crates/cpex-core/src/hooks/: adapter.rs  mod.rs  payload.rs  trait_def.rs  types.rs
crates/cpex-ffi/: Cargo.toml
crates/cpex-ffi/src/: lib.rs
crates/cpex-payload/: Cargo.toml
crates/cpex-payload/src/: error.rs  lib.rs
crates/cpex-payload/src/cmf/: enums.rs
crates/cpex-payload/src/extensions/: filter.rs  http.rs
crates/cpex-payload/src/hooks/: macros.rs  mod.rs  payload.rs  trait_def.rs
crates/cpex-sdk/: Cargo.toml
crates/cpex-sdk/src/: lib.rs
crates/cpex-wasm-dashboard/: Cargo.toml
crates/cpex-wasm-dashboard/src/: lib.rs  main.rs
crates/cpex-wasm-host/: Cargo.toml  Makefile  plugin.wasm
crates/cpex-wasm-host/config/: config.yaml
crates/cpex-wasm-host/spec/: sandbox-manager.md
crates/cpex-wasm-host/src/: dashboard.rs  lib.rs  main.rs  policy_loader.rs  sandbox_manager.rs
crates/cpex-wasm-host/tests/: sandbox_enforcement.rs
crates/cpex-wasm-host/wit/: world.wit
crates/cpex-wasm-plugin/: Cargo.toml  Makefile
crates/cpex-wasm-plugin/src/: bindings.rs  errors.rs  lib.rs
docs/: hugo.toml
docs/content/: _index.md
docs/content/docs/: vision.md
docs/specs/: cpex-go-spec.md  cpex-rust-spec.md  plugin-framework-spec.md  wasm-plugin-manifest.schema.json  wasm-plugin-spec.md
examples/go-demo/: .gitignore  README.md  cmf_plugins.yaml  go.mod  main.go  plugins.yaml
examples/go-demo/ffi/: Cargo.toml
examples/go-demo/ffi/src/: cmf_plugins.rs  demo_plugins.rs  lib.rs
go/cpex/: README.md  cmf.go  cmf_test.go  constants.go  errors.go  ffi.go  go.mod  manager.go  manager_test.go  types.go
samplewasmplugin/: Cargo.toml  Makefile  config.yaml  plugin-manifest.yaml
samplewasmplugin/src/: lib.rs
samplewasmplugin/tests/: .gitignore  README.md  test_plugin.py
sandboxing/: Cargo.toml  README_CAPSULE.md  README_SANDBOX_MANAGER.md  Readme.md
sandboxing/config/: policy.yaml
sandboxing/docs/: clock_access_policies.md  environment_variables.md  ip_address_filtering.md  limitations_sandboxing.md  resource_limits.md  socket_level_filtering.md  threat_model.md
sandboxing/examples/: capsule_example.rs  multi_plugin_demo.rs
sandboxing/plugin/: Cargo.toml  Makefile  Readme.md
sandboxing/plugin/src/: bindings.rs  lib.rs
sandboxing/plugin/wit/: deps.toml  world.wit
sandboxing/src/: lib.rs  main.rs  policy_loader.rs  sandbox_manager.rs
sandboxing/templates/wasm-plugin/: Cargo.toml  Makefile  README.md  RUNNING_HOST.md  cargo-generate.toml  plugin.wasm  policy.yaml
sandboxing/templates/wasm-plugin/examples/: host.rs
sandboxing/templates/wasm-plugin/src/: lib.rs
sandboxing/templates/wasm-plugin/wit/: world.wit
sandboxing/tests/: policy_tests.rs
sandboxing/tests/common/: mod.rs
tests/unit/cpex/framework/: test_plugin_modes.py
tests/unit/cpex/framework/isolated/: test_venv_comm.py
