# Location: ./Cargo.toml
# Copyright 2025
# SPDX-License-Identifier: Apache-2.0
# Authors: Teryl Taylor
#
# Workspace root for the CPEX Rust crates.

[workspace]
resolver = "2"
members = [
    "crates/cpex-core",
    "crates/cpex-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Teryl Taylor"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
paste = "1"
futures = "0.3"
hashbrown = "0.15"
