[package]
name = "samplewasmplugin"
version = "0.1.0"
edition = "2021"
authors = ["Shriti <your@email.com>"]
license = "Apache-2.0"
description = "A WebAssembly Component Model plugin for CPEX"
publish = false

[lib]
# `cdylib` is required for Component Model output. `cargo component` will
# then wrap the produced core wasm in a Component Model envelope.
crate-type = ["cdylib"]

[dependencies]
# wit-bindgen generates the Rust types and traits from wit/cpex-plugin.wit.
# Pin a known-good version; cargo-component will warn on adapter mismatch.
wit-bindgen = "0.36"

# JSON in/out is the contract with the host. serde_json is the obvious pick;
# it is small, well-audited, and produces compact wasm.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ---------------------------------------------------------------------
# cargo-component metadata
# ---------------------------------------------------------------------
# Run with:  cargo component build --release
# Output:    target/wasm32-wasip2/release/samplewasmplugin.wasm
# The Makefile copies that into ./build/ and computes its sha256.

[package.metadata.component]
package = "contextforge:samplewasmplugin"

[package.metadata.component.target]
path = "wit"
world = "plugin"

[package.metadata.component.dependencies]
# No external WIT deps — we only depend on contextforge:cpex which is
# defined inside ./wit/ itself.

# ---------------------------------------------------------------------
# Optimize for size; the host loads the bytes into memory and hashes them.
# Smaller artifact = faster startup and smaller cosign signatures.
# ---------------------------------------------------------------------
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
