[package]
name = "sandboxing"
version = "0.1.0"
edition = "2024"

[lib]
name = "sandboxing"
path = "src/lib.rs"

[[bin]]
name = "sandboxing"
path = "src/main.rs"

[[example]]
name = "capsule_example"
path = "examples/capsule_example.rs"

[dependencies]
wasmtime = { version = "28", features = ["component-model"] }
wasmtime-wasi = "28"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
capsule-core = { git = "https://github.com/capsulerun/capsule.git", branch = "main" }
