[package]
name = "sandboxing"
version = "0.1.0"
edition = "2024"

[lib]
name = "sandboxing"
path = "src/lib.rs"

[[bin]]
name = "sandboxing"
path = "src/main.rs"

[dependencies]
wasmtime = { version = "28", features = ["component-model", "async"] }
wasmtime-wasi = "28"
wasmtime-wasi-http = "28"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
http = "1"
http-body-util = "0.1"
bytes = "1"
ipnet = "2.10"
