# Location: ./crates/cpex-payload/Cargo.toml
# Copyright 2025
# SPDX-License-Identifier: Apache-2.0
# Authors: Teryl Taylor
#
# CPEX Payload — minimal types for WASM plugins.

[package]
name = "cpex-payload"
description = "CPEX payload types — minimal types for WASM plugins."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# WASM-compatible tokio features only
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
wildmatch = { workspace = true }
