# Location: ./crates/cpex-sdk/Cargo.toml
# Copyright 2025
# SPDX-License-Identifier: Apache-2.0
# Authors: Teryl Taylor
#
# CPEX SDK — lean crate for plugin authors.
# Re-exports the Plugin trait and payload/result types from cpex-core
# without pulling in the PluginManager, hosts, or FFI.

[package]
name = "cpex-sdk"
description = "CPEX plugin author SDK — Plugin trait, payloads, and result types."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cpex-core = { path = "../cpex-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
