[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = "0.30"
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "example:plugin"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:sockets" = { path = "wit/deps/sockets" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
