[package]
name = "plugin"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
description = "{{description}}"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.57.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wasmtime = { version = "28", features = ["component-model", "async"] }
wasmtime-wasi = "28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[[example]]
name = "host"
path = "examples/host.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
